--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# credits: https://gist.github.com/iainconnor/8605514
+
 # Built application files
 *.apk
 *.ap_
@@ -13,6 +15,7 @@ bin/
 gen/
 
 # Gradle files
+gradle/
 .gradle/
 build/
 /*/build/
@@ -25,3 +28,19 @@ proguard/
 
 # Log Files
 *.log
+
+# Signing files
+.signing/
+
+# User-specific configurations
+.idea/libraries/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+*.iml
