--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -17,13 +18,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dexOptions {
+        javaMaxHeapSize "2g"
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
     // Added for AdMob
-    compile 'com.google.android.gms:play-services:7.3.0'
-    compile project(':jokes')
+//    compile 'com.google.android.gms:play-services:7.3.0'
+    // https://discussions.udacity.com/t/app-dexdebug-error/38629/8?u=ivam_luz
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
     compile project(':jokedisplayer')
+
+//    compile 'com.google.appengine:appengine-endpoints:1.9.18'
 }
