--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,17 @@ android {
         }
     }
 
+    productFlavors {
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
+            resValue "string", "app_name", "Build it Bigger (free)"
+        }
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+            resValue "string", "app_name", "Build it Bigger (paid)"
+        }
+    }
+
     dexOptions {
         javaMaxHeapSize "2g"
     }
@@ -28,10 +39,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     // Added for AdMob
-//    compile 'com.google.android.gms:play-services:7.3.0'
+    // compile 'com.google.android.gms:play-services:7.3.0'
     // https://discussions.udacity.com/t/app-dexdebug-error/38629/8?u=ivam_luz
-    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    freeCompile 'com.google.android.gms:play-services-ads:8.3.0'
     compile project(':jokedisplayer')
-
-//    compile 'com.google.appengine:appengine-endpoints:1.9.18'
 }
