--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,12 @@ allprojects {
         jcenter()
     }
 }
+
+// http://stackoverflow.com/a/31441508
+task integrationTest(dependsOn: ":backend:appengineRun") {
+    project(":backend").afterEvaluate { backend ->
+        backend.extensions.appengine.daemon = true
+    }
+
+    finalizedBy([":app:connectedAndroidTest", ":backend:appengineStop"])
+}
